Revise README for clarity and detail
Updated the README to enhance project description, features, and educational value.