@@ -1,53 +1,79 @@
 # Zombied
 
-**Zombied** is an educational space-themed game that turns physics practice into an engaging, interactive experience.  
-Players launch a projectile through space, adjusting **speed** and **direction** to hit a **target planet** — learning key physics concepts like motion, velocity, and trajectory along the way.
+## Project Description
 
-## 🚀 Overview
+**Zombied** is an educational space-themed game that helps players develop **physics intuition**.
+Players explore how objects move in a multi-planetary system by setting **speed** and **direction** to navigate through space with realistic acceleration effects.
 
-In **Zombied**, you become a space explorer learning to master the laws of motion.  
-Each level challenges you to calculate and input the right values to send your projectile to the target planet.  
-The game responds dynamically based on your inputs — teaching through both **success** and **failure**.
+## How to Run the Project
 
-- 🎯 **Goal:** Hit the target planet by setting correct speed and direction.  
-- 📈 **Progression:** Each successful hit increases your **score** and **level**.  
-- 💡 **Learning Focus:** Basic physics principles (motion, angles, and projectile dynamics).  
-- 🌌 **Theme:** A fun, cosmic environment with colorful planets and space visuals.
+### In NetBeans
 
-## 🧩 Features
+1. Install **Java JDK 17+**
+2. Install **JavaFX 21+** and note the path to the `lib` folder
+3. Open NetBeans and select **File → Open Project**, then choose the project folder
+4. Right-click the project → **Properties → Libraries → Add JAR/Folder**, and add the JavaFX `lib` folder
+5. Go to **Run → Set Project Configuration → Customize** and add VM options:
 
--  **Multiple Levels:** Increasing difficulty to match growing player skill.  
--  **Interactive Input:** Players set initial velocity and direction.  
--  **Realistic Motion:** Projectiles travel through space according to real physics logic.  
--  **Score System:** Earn points for every successful hit.  
--  **Learning Feedback:** When you miss, the game explains *why* — reinforcing understanding.  
--  **Engaging Visuals:** Space-themed design with moving planets and glowing effects.  
+   ```
+   --module-path "path/to/javafx/lib" --add-modules javafx.controls,javafx.fxml
+   ```
 
-## 🕹️ How to Play
+   *(replace "path/to/javafx/lib" with your JavaFX path)*
+6. Right-click the project → **Run** or press **F6**
+7. Click **Start** in the main menu, input speed and direction, and observe the object’s motion
 
-1. **Enter values** for your projectile’s speed and direction.  
-2. Click **“Launch”** to fire the projectile through space.  
-3. Watch how it moves — will it hit the planet or miss?  
-4. If you **hit the target**, your score and level increase.  
-5. If you **miss**, the game provides feedback to help you learn and try again.  
+## Overview
 
-> 💡 *Tip:* Experiment with different values to see how changes affect your projectile’s path.
+In **Zombied**, players interact with a **multi-planetary system**, learning how forces and motion affect trajectories.
+The game emphasizes understanding **acceleration, velocity, and motion dynamics** in an intuitive, visual way.
 
-## 🧠 Educational Value
-
-Zombied helps players intuitively understand:
-- Velocity and trajectory relationships  
-- Angle and distance effects on motion  
-- Real-time cause and effect through simulation  
-- Analytical thinking and experimentation  
+* **Goal:** Experiment with speed and direction to see how objects behave in space
+* **Learning Focus:** Physics intuition through observation of motion in a multi-planet system
+* **Theme:** Minimalist space visuals focusing on motion dynamics
 
 
-## 🧰 Technologies Used
+## Features
 
-- **Language:** Java  
-- **Framework:** JavaFX (for GUI, animation, and interactivity)  
-- **Concepts:** Object-Oriented Programming, Event Handling, Physics Simulation  
+* **Main Menu:** Instructions, **Start**, and **Exit** buttons
+* **Interactive Input:** Players enter speed and direction for the object
+* **Physics Simulation:** Motion influenced by multiple planetary accelerations
+* **Immediate Feedback:** Observe trajectory changes based on inputs
+* **Learning Focus:** Understand how objects respond to forces in space
 
 
-### 🌌 “Learn. Launch. Land.”  
-*Explore the universe — one physics problem at a time.*
+## Teamwork Summary
+
+Each member also worked on their model’s test units.
+
+**Team Member 1 (Zeel Gajjar):**
+
+* MainView and GameView and their controllers
+* Models: PhysicsUtil, Vector2, Projectile, and Trajectory
+
+**Team Member 2 (Vedika Jain):**
+
+* ResultView and its Controller
+* Models: CollisionUtil, GameModel, GameState, and Planet
+
+
+## Educational Value
+
+**Zombied** helps players:
+
+* Develop an intuitive understanding of motion and acceleration
+* Observe cause-and-effect relationships in a multi-planetary system
+* Experiment safely to explore physics concepts visually
+* Strengthen analytical thinking and experimentation skills
+
+
+## Technologies Used
+
+* **Language:** Java 17+
+* **Framework:** JavaFX 21+ (for GUI, animation, and interactivity)
+* **Concepts:** Object-Oriented Programming, Event Handling, Physics Simulation
+
+
+### 🌌 “Learn. Observe. Understand.”
+
+*Build your physics intuition one trajectory at a time.*
